--- a/roguehunter.man
+++ b/roguehunter.man
@@ -52,7 +52,7 @@ option set.
 .fi
 .ft R
 .LP
-Identify rogue processes on the current host using the criteria hard coded
+Identify rogue processes (cpu hogs) on the current host using the criteria hard coded
 in the script and terminate them.
 .IP
 .ft CW
@@ -64,5 +64,18 @@ As above but echo each line to standard error.
 .IR roguehunter.cf .
 .SH BUGS
 The script has very little input error checking. 
+.SH HISTORY
+The script was created to deal with extreme process hogs created by 
+.I Mega
+on a \fICaldera Open Unix\fR host. Access to the system is achieved through
+terminal emulation from PCs. I suspect that the PCs are shutdown without
+ending the telnet/ssh session and that as a consequence SIGHUP is never
+sent to host. When the telnet session is broken the login process is 
+attached to \fIinit\fR and the application process smn12 becomes a process
+hog. The script therefore is essentially concerned with processor hogs 
+identified as smn12 and the associated \fBksh\fR login although it could
+be easily modified to use a config script which identified other target
+names. Other processes that are identified as a potential problem are
+added to the log files for further consideration.
 .SH AUTHOR
 Clifford W Fulford, City Linux. Contact fulford@fulford.net or +44 (0)709 229 5385.
